--- a/index.html
+++ b/index.html
@@ -2,41 +2,48 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Intro component with sign up form</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <title>Intro component with sign up form</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  Learn to code by watching others
-
-  See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-  but understanding how developers think is invaluable. 
-
-  Try it free 7 days then $20/mo. thereafter
-
-  First Name 
-  Last Name 
-  Email Address
-  Password
-
-  Claim your free trial 
-
-  By clicking the button, you are agreeing to our Terms and Services
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+  <div class="content">
+    <div class="left-side">
+      <h1 class="left-head">Learn to code by watching others</h1>
+      <p class="left-text">See how experienced developers solve problems in real-time. Watching scripted tutorials is great, but understanding how developers think is invaluable. </p>
+    </div>
+    <div class="right-side">
+      <div class="right-header">
+        <h3><span>Try it free 7 days</span> then $20/mo. thereafter</h3>
+      </div>
+      <form>
+        <div class="form-item">
+          <input type="text" name="First Name" placeholder="First Name" class="first-name">
+          <img src="./images/icon-error.svg" class="error-img error-img-name">
+          <p class="error-msg error-msg-name">First Name cannot be empty</p>
+        </div>
+        <div class="form-item">
+          <input type="text" name="Last Name" placeholder="Last Name" class="last-name">
+          <img src="./images/icon-error.svg" class="error-img error-img-last">
+          <p class="error-msg error-msg-last">Last Name cannot be empty</p>
+        </div>
+        <div class="form-item">
+          <input type="text" name="Email Address" placeholder="Email Address" class="email">
+          <img src="./images/icon-error.svg" class="error-img error-img-email">
+          <p class="error-msg error-msg-email">Look like this is not an email</p>
+        </div>
+        <div class="form-item">
+          <input type="password" name="Password" placeholder="Password" class="password">
+          <img src="./images/icon-error.svg" class="error-img error-img-password">
+          <p class="error-msg error-msg-password">Password cannot be empty</p>
+        </div>
+        <button class="btn">claim your free trial</button>
+        <p class="terms">By clicking the button, you are agreeing to our <span>Terms and Services</span></p>
+      </form>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
